feat: remove container_name
